# open-search-mcp-server

./: .env-example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ingest-code/: ingest-code-text-only.py  ingest-code-with-vectors.py
open-search/: code-search-text-only.json  code-search-with-vectors.json
